# C2CPO

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: consumer.Dockerfile  docker-compose.yml  producer.Dockerfile
demo/consumer/: app.py
demo/producer/: app.py
docs/: integration-guide.md  threat-model.md
sdk/nodejs/: package-lock.json  package.json
sdk/nodejs/src/: anomaly.ts  exceptions.ts  index.ts  key_manager.ts  tier1.ts  tier2.ts
sdk/nodejs/tests/: interop.test.ts
sdk/python/: pyproject.toml  setup.py
sdk/python/c2cpo/: __init__.py  anomaly.py  exceptions.py  key_manager.py  tier1.py  tier2.py
sdk/python/tests/: test_tier1.py  test_tier2.py
test-vectors/: README.md  epoch_0_vectors.json  epoch_1_vectors.json
